Fixed some mobile layout problems

--- a/PartyPlay/static/css/styles.css
+++ b/PartyPlay/static/css/styles.css
@@ -33,6 +33,10 @@ body {
     background: #000;
     padding: 10px;
     margin:0;
+    color: #ffffff;
 }
-
+#mobile-bar a{
+    text-decoration: none;
+    color: #999999;
+}
 
